# fleet-editor-extensions

./: DEVELOPMENT.md  README.md  fleet-gitops-default.strict.schema.json
fleet-schema-gen/: .gitignore  Cargo.toml  Makefile  build.rs  migrations.toml  test_go_parser.rs
fleet-schema-gen/examples/: test_go_parser.rs  test_go_parser_full.rs
fleet-schema-gen/schema-defs/: controls.yml  labels.yml  policies.yml  queries.yml  software.yml
fleet-schema-gen/scripts/: build-macos.zsh  build-universal.zsh  install-macos.zsh  notarize-macos.zsh  release-macos.zsh  sign-macos.zsh  uninstall-macos.zsh
fleet-schema-gen/src/: lib.rs  main.rs
fleet-schema-gen/src/generators/: intellij.rs  mod.rs  neovim.rs  strict.rs  sublime.rs  sublime_lsp.rs  vscode.rs
fleet-schema-gen/src/linter/: config.rs  engine.rs  error.rs  fleet_config.rs  init.rs  mod.rs  osquery.rs  rules.rs
fleet-schema-gen/src/linter/migrate/: backup.rs  detector.rs  diff.rs  engine.rs  git.rs  loader.rs  mod.rs  resolver.rs  transformations.rs  types.rs
fleet-schema-gen/src/lsp/: backend.rs  code_actions.rs  completion.rs  diagnostics.rs  hover.rs  mod.rs  position.rs  schema.rs  semantic_tokens.rs  symbols.rs  workspace.rs
fleet-schema-gen/src/schema/: merger.rs  mod.rs  types.rs
fleet-schema-gen/src/sources/: docs_scraper.rs  fleet_repo.rs  github.rs  go_parser.rs  mod.rs  yaml_defs.rs
fleet-schema-gen/src/utils/: http.rs  markdown.rs  mod.rs
scripts/: build-macos.sh  build-standalone-lsp.sh  build-vscode-extension.sh  gh-release.sh  install.sh  release-local.sh
sublime-package/: README.md  (+4 more)
(+16 files in other folders)
