[package]
name = "fleet-schema-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.20"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.42", features = ["full"] }
indexmap = { version = "2.7", features = ["serde"] }
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"

[dev-dependencies]
tempfile = "3.14"
