[package]
name = "fleet-schema-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.20"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.42", features = ["full"] }
indexmap = { version = "2.7", features = ["serde"] }
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"
annotate-snippets = "0.11"
colored = "2.1"
notify = "7.0"
similar = "2.6"
toml = "0.8"
once_cell = "1.20"
git2 = { version = "0.19", default-features = false, features = ["vendored-openssl", "vendored-libgit2"] }
tree-sitter = "0.20"
tree-sitter-go = "0.20"

[dev-dependencies]
tempfile = "3.14"
